Começo de iluminação
Primeira tentativa de iluminação ambiente juntamente com iluminação
difusa. Com erros na imagem.

--- a/Bezier/Bezier.vcxproj
+++ b/Bezier/Bezier.vcxproj
@@ -12,6 +12,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\Face3D.h" />
+    <ClInclude Include="include\LightSource.h" />
     <ClInclude Include="include\Object3D.h" />
     <ClInclude Include="include\openGL_tutorial.h" />
     <ClInclude Include="include\Point3D.h" />
