--- a/Bezier/Bezier.vcxproj.filters
+++ b/Bezier/Bezier.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="include\Object3D.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="include\Camera.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\main.cpp">
